--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ p {
 }
 .container {
   margin: 50%;
-  width: 160px;
+  width: 175px;
   border: 1px solid #6d6b65;
   border-radius: 8px;
   background-color: #272626;
   color: #b6b7b7;
-  opacity: 0.8;
+  opacity: 0.6;
   padding: 2px;
   box-shadow: -2px 6px 9px -2px rgba(0, 0, 0, 0.75);
 }
@@ -26,5 +26,9 @@ p {
 }
 
 i {
-  margin-left: 35px;
+  margin-left: 48px;
+}
+p:hover {
+  background-color: darkslategray;
+  cursor: default;
 }
