--- a/style.css
+++ b/style.css
@@ -9,8 +9,18 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+.mainContainer {
+  display: flex;
+  align-items: flex-start;
+  margin-left: 381px;
+  margin-top: 100px;
+  padding: 0;
+
+  width: 400px;
+  align-content: center;
+}
+
 .container {
-  margin: 50%;
   width: 175px;
   border: 1px solid #6d6b65;
   border-radius: 8px;
@@ -31,4 +41,17 @@ i {
 p:hover {
   background-color: darkslategray;
   cursor: default;
+}
+.extern {
+  /* height: 50px; */
+
+  margin-left: 1px;
+  width: 175px;
+  border: 1px solid #6d6b65;
+  border-radius: 8px;
+  background-color: #272626;
+  color: #b6b7b7;
+  opacity: 0.6;
+  padding: 2px;
+  box-shadow: -2px 6px 9px -2px rgba(0, 0, 0, 0.75);
 }
