--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: aqua;
+  background-color: steelblue;
 }
+
 p {
   margin-left: 8px;
   margin-top: 0;
@@ -43,7 +44,7 @@ p:hover {
   cursor: default;
 }
 .extern {
-  /* display: none; */
+  visibility: hidden;
   margin-left: 1px;
   width: 175px;
   border: 1px solid #6d6b65;
