--- a/style.css
+++ b/style.css
@@ -35,15 +35,8 @@ p {
   border: 1px solid #6d6b65;
   margin: 2px;
 }
-
-i {
-  margin-left: 48px;
-}
-p:hover {
-  background-color: darkslategray;
-  cursor: default;
-}
 .extern {
+  /* visibility: visible; */
   visibility: hidden;
   margin-left: 1px;
   width: 175px;
@@ -54,4 +47,12 @@ p:hover {
   opacity: 0.6;
   padding: 2px;
   box-shadow: -2px 6px 9px -2px rgba(0, 0, 0, 0.75);
+}
+
+i {
+  margin-left: 48px;
+}
+p:hover {
+  background-color: darkslategray;
+  cursor: default;
 }
